--- a/Problema/assets/jade/index.jade
+++ b/Problema/assets/jade/index.jade
@@ -14,7 +14,7 @@ html(lang='en')
               span.icon-bar
               span.icon-bar
               span.icon-bar
-            a.navbar-brand(href='#') 
+            a.navbar-brand(href='http://laboratoria.la/') 
               h1 Start Bootstrap
           .navbar-collapse.collapse
             ul.nav.navbar-nav.navbar-right
